--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      VITE_GOOGLE_APPS_SCRIPT_URL: ${{ secrets.VITE_GOOGLE_APPS_SCRIPT_URL }}
+      VITE_OFFICE_LATITUDE: ${{ secrets.VITE_OFFICE_LATITUDE }}
+      VITE_OFFICE_LONGITUDE: ${{ secrets.VITE_OFFICE_LONGITUDE }}
+      VITE_OFFICE_RADIUS_METERS: ${{ secrets.VITE_OFFICE_RADIUS_METERS }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
