--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,13 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Build project
+      - name: Build
         run: bun run build
+        env:
+          VITE_OFFICE_LATITUDE: ${{ secrets.VITE_OFFICE_LATITUDE }}
+          VITE_OFFICE_LONGITUDE: ${{ secrets.VITE_OFFICE_LONGITUDE }}
+          VITE_OFFICE_RADIUS_METERS: ${{ secrets.VITE_OFFICE_RADIUS_METERS }}
+          VITE_GOOGLE_APPS_SCRIPT_URL: ${{ secrets.VITE_GOOGLE_APPS_SCRIPT_URL }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
